Update copies3.java